--- a/assets/scss/_opportunities-page.scss
+++ b/assets/scss/_opportunities-page.scss
@@ -4,7 +4,7 @@
 
   &__header {
     display: grid;
-    grid-template-columns: minmax(0, 1fr) minmax(18rem, 37.6875rem);
+    grid-template-columns: minmax(0, 1fr) minmax(18rem, 50rem);
     gap: 1.875rem;
     align-items: start;
     margin-bottom: 4rem;
@@ -12,7 +12,6 @@
 
   &__title {
     margin: 0;
-    max-width: 8ch;
     color: #444b52;
     font-weight: 500;
     line-height: 1.1;
@@ -28,8 +27,6 @@
   &__logos {
     display: grid;
     grid-template-columns: repeat(6, minmax(0, 1fr));
-    border-top: 1px solid #d9d9d9;
-    border-left: 1px solid #d9d9d9;
   }
 
   &__logo-item {
@@ -38,16 +35,24 @@
     justify-content: center;
     min-height: 12.5rem;
     padding: 1.875rem;
+    background: #ffffff;
     border-right: 1px solid #d9d9d9;
     border-bottom: 1px solid #d9d9d9;
-    background: #ffffff;
 
     img {
       display: block;
       max-width: 100%;
-      max-height: 6.25rem;
+      // max-height: 6.25rem;
       width: auto;
       height: auto;
+    }
+
+    &:nth-child(6n) {
+      border-right: 0;
+    }
+
+    &:nth-last-child(-n + 6) {
+      border-bottom: 0;
     }
   }
 
@@ -64,6 +69,24 @@
 
     &__logos {
       grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+
+    &__logo-item {
+      &:nth-child(6n) {
+        border-right: 1px solid #d9d9d9;
+      }
+
+      &:nth-last-child(-n + 6) {
+        border-bottom: 1px solid #d9d9d9;
+      }
+
+      &:nth-child(3n) {
+        border-right: 0;
+      }
+
+      &:nth-last-child(-n + 3) {
+        border-bottom: 0;
+      }
     }
   }
 
@@ -88,8 +111,22 @@
       min-height: 8.5rem;
       padding: 1.25rem;
 
-      img {
-        max-height: 3.5rem;
+      img {}
+
+      &:nth-child(3n) {
+        border-right: 1px solid #d9d9d9;
+      }
+
+      &:nth-last-child(-n + 3) {
+        border-bottom: 1px solid #d9d9d9;
+      }
+
+      &:nth-child(2n) {
+        border-right: 0;
+      }
+
+      &:nth-last-child(-n + 2) {
+        border-bottom: 0;
       }
     }
   }
@@ -126,8 +163,7 @@
     background: transparent;
     color: #bab4b3;
     font-size: clamp(1.375rem, 1.7vw, 2rem);
-    font-weight: 400;
-    line-height: 1.2;
+    font-weight: 500;
     text-align: left;
     transition: color 0.28s ease, transform 0.28s ease;
 
@@ -143,7 +179,7 @@
     position: relative;
     min-height: 34.625rem;
     overflow: hidden;
-    background: #e9e9e9;
+    background: transparent;
   }
 
   &__image {
